Made space adjustments on all pages to avoid overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,7 +29,7 @@ body {
   background-color:  var(--color-bg-dark);
   font-family: var(--font-family);
   color: white;
-  min-height: max(884px, 100dvh);
+  /* min-height: max(884px, 100dvh); */
   box-sizing: border-box;
   
 }
